# idjits

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust-tests.yml
src/: lib.rs  main.rs  validation.rs
