[package]
name = "idjits"
description = "A simple command-line tool for generating idjits."
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.md"
homepage = "https://github.com/ava-cassiopeia/idjits"
repository = "https://github.com/ava-cassiopeia/idjits"
readme = "README.md"
exclude = [
  ".jj/*",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
